@@ -229,6 +229,8 @@ struct config_file_data_ipmi_sensors
   int output_sensor_state_count;
   char *sensor_state_config_file;
   int sensor_state_config_file_count;
+  int output_sensor_thresholds;
+  int output_sensor_thresholds_count;
   int no_sensor_type_output;
   int no_sensor_type_output_count;
   int comma_separated_output_count;
