@@ -472,6 +472,8 @@
 #
 # ipmi-sensors-entity-sensor-names DISABLE
 #
+# ipmi-sensors-output-sensor-thresholds DISABLE
+#
 # ipmi-sensors-no-sensor-type-output DISABLE
 #
 # ipmi-sensors-comma-separated-output DISABLE
